--- a/css/style.css
+++ b/css/style.css
@@ -120,3 +120,11 @@ h6 {
     background-color: black;
     color: rgb(206, 25, 25);
 }
+
+.test {
+    color: rgb(25, 206, 134);
+}
+
+.Button {
+    color: rgb(67, 18, 192);
+}
